--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@ My Demo Page
 <body>
 
   <h1>Hello World!</h1>
-  Vsauce, Michael here <br />
+  Vsauce &nbsp;&nbsp;&nbsp;&nbsp; Michael here <br />
   This is my TED talk
+  <h3> But how much does THIS TED talk weigh? </h3>
+  <p> Weight, as a concept, was invented by Greek philo... </p>
 
 </body>
 
