--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ My Demo Page
   <h1>Hello World!</h1>
   Vsauce &nbsp;&nbsp;&nbsp;&nbsp; Michael here <br />
   This is my TED talk
-  <hr />
+  <hr size='2' />
   <h3> But how much does THIS TED talk weigh? </h3>
   <p> Weight, as a concept, was invented by Greek philo... </p>
 
