--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <title>
 
-My Demo Page
+James Cameron
 
 </title>
 
@@ -12,9 +12,9 @@ My Demo Page
 
 <body>
 
-  <h1>Hello World!</h1>
-  Vsauce &nbsp;&nbsp;&nbsp;&nbsp; Michael here <br />
-  This is my TED talk
+  <h1>It's me!</h1>
+  <h3> I'm James Cameron </h3> <br />
+  No, not that one
   <hr size='2' />
   <h3> But how much does THIS TED talk weigh? </h3>
   <p> Weight, as a concept, was invented by Greek philo... </p>
