--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@ James Cameron
   <h3> I'm James Cameron </h3> <br />
   No, not that one
   <hr size='2' />
-  <h3> But how much does THIS TED talk weigh? </h3>
-  <p> Weight, as a concept, was invented by Greek philo... </p>
+  Name: &nbsp;&nbsp; <p> James Cameron </p> <br />
+  Email: &nbsp;&nbsp; <p> jcamer03@tufts.edu </p> <br />
+  Phone: &nbsp;&nbsp; <p> 857-251-4993 </p> <br />
+  Major: &nbsp;&nbsp; <p> Computer Science </p> <br />
+  IP: &nbsp;&nbsp; <p> 66.30.11.4 </p> <br />
 
 </body>
 
