--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ James Cameron
   Phone: &nbsp;&nbsp; <p> 857-251-4993 </p> <br />
   Major: &nbsp;&nbsp; <p> Computer Science </p> <br />
   IP: &nbsp;&nbsp; <p> 66.30.11.4 </p> <br />
+  From: &nbsp;&nbsp; <p> Somerville </p> <br /> <br />
+  
+  <p> I don't think people would know that I'm a wreslting fan unless I said so </p>
 
 </body>
 
