--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ James Cameron
   IP: &nbsp;&nbsp; <p> 66.30.11.4 </p> <br />
   From: &nbsp;&nbsp; <p> Somerville </p> <br /> <br />
   
-  <p> I don't think people would know that I'm a wreslting fan unless I said so </p>
+  <p> I don't think people would know that I'm a <h1> wreslting fan </h1> unless I said so </p>
 
 </body>
 
